Bug 165998. Option and select bounds incorrect. r=pkwarren, sr=roc