accessible/src/xul/nsXULSelectAccessible.h
@@ -115,6 +115,7 @@ public:
   /* ----- nsIAccessible ----- */
   NS_IMETHOD GetRole(PRUint32 *_retval);
   NS_IMETHOD GetState(PRUint32 *_retval);
+  nsIFrame*  GetBoundsFrame();
 };
 
 /** ------------------------------------------------------ */
